--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .profile-img {
@@ -39,10 +40,9 @@ header {
     height: 150px;
     object-fit: cover;
     border: 4px solid #fff;
-    /* Centering the image */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 header h1 {
