--- a/styles.css
+++ b/styles.css
@@ -31,18 +31,18 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
 }
 
 .profile-img {
-    border-radius: 50%;
+    border-radius: 30%;
     width: 150px;
     height: 150px;
     object-fit: cover;
     border: 4px solid #fff;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    /* Centering the image */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 header h1 {
