--- a/styles.css
+++ b/styles.css
@@ -31,18 +31,18 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .profile-img {
-    border-radius: 30%;
+    border-radius: 50%;
     width: 150px;
     height: 150px;
     object-fit: cover;
     border: 4px solid #fff;
-    /* Centering the image */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-60%);
 }
 
 header h1 {
