--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,7 @@ header {
     height: 150px;
     object-fit: cover;
     border: 4px solid #fff;
-    position: absolute;
-    top: 35%; /* Adjusted value */
-    transform: translateY(-50%); /* Adjusted for centering */
+    margin-bottom: -20px; /* Adjust this value as needed */
 }
 
 
