--- a/styles.css
+++ b/styles.css
@@ -34,14 +34,24 @@ header {
     padding-top: 40px; /* Adjust space above profile section */
 }
 
-.profile-img {
+/* .profile-img {
     border-radius: 50%;
     width: 150px;
     height: 150px;
     object-fit: cover;
     border: 4px solid #fff;
     margin-bottom: -10px; /* Adjust this value as needed */
+} */
+.profile-img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border: 4px solid #fff;
+    position: relative;  /* Position relative for transform */
+    top: 10px; /* Adjust this value to move the image down inside the circle */
 }
+
 
 
 header h1 {
